# automaton-auditor-swarm

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
reports/: interim_report.md
rubric/: week2_rubric.json
src/: graph.py  state.py
src/nodes/: detectives.py  judges.py  justice.py
src/tools/: doc_tools.py  repo_tools.py
